--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
             </h1>
 
             <!-- Add a short description about yourself or your brand -->
-            <p>A gat, silly, dumb programmer - because why not?</p>
+            <p>A gay, silly, dumb programmer - because why not?</p>
 
             <!-- All your buttons go here -->
-            <div class="button-stack" role="
+            <div class="button-stack" role="navigation">
               
               <!-- Bluesky -->
               <a class="button button-bluesky" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/bluesky.svg" alt="Bluesky Logo">Bluesky</a>
