--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               <a class="button button-bluesky" href="https://bsky.app/profile/melodyuwu.bsky.social" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/bluesky.svg" alt="Bluesky Logo">Bluesky</a>
 
               <!-- Buy Me A Coffee -->
-              <a class="button button-coffee" href="buymeacoffee.com/cutiemelob" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/buy-me-a-coffee.svg" alt="Buy Me A Coffee Logo">Buy Me A Coffee</a>
+              <a class="button button-coffee" href="https://buymeacoffee.com/cutiemelob" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/buy-me-a-coffee.svg" alt="Buy Me A Coffee Logo">Buy Me A Coffee</a>
 
               <!-- Discord -->
               <a class="button button-discord" href="https://discordapp.com/users/1163154572370509844" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/discord.svg" alt="Discord Logo">Discord</a>
