--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
 
             <!-- All your buttons go here -->
             <div class="button-stack" role="navigation">
-              
-              <!-- Bluesky -->
-              <a class="button button-bluesky" href="https://bsky.app/profile/melodyuwu.bsky.social" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/bluesky.svg" alt="Bluesky Logo">Bluesky</a>
 
-              <!-- Buy Me A Coffee -->
-              <a class="button button-coffee" href="https://buymeacoffee.com/cutiemelob" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/buy-me-a-coffee.svg" alt="Buy Me A Coffee Logo">Buy Me A Coffee</a>
+              <!-- Signal -->
+              <a class="button button-signal" href="https://signal.me/#eu/t-55VSK90eTKEWWZUZYrduORRjO5e9h_eX77vW_L-9bOYVHUYGhDELdWEyTlX-af" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/signal.svg" alt="Signal Logo">Signal</a>
+
+              <!-- Telegram -->
+              <a class="button button-telegram" href="https://t.me/melodyuwuu" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/telegram.svg" alt="Telegram Logo">Telegram</a>
 
               <!-- Discord -->
               <a class="button button-discord" href="https://discordapp.com/users/1163154572370509844" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/discord.svg" alt="Discord Logo">Discord</a>
@@ -77,28 +77,28 @@
               <!-- GitLab -->
               <a class="button button-gitlab" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/gitlab.svg" alt="GitLab Logo">GitLab</a>
 
-              <!-- Ko-fi -->
-              <a class="button button-ko-fi" href="https://ko-fi.com/melodyuw" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/ko-fi.svg" alt="Ko-fi Logo">Support me on Ko-fi</a>
-
-              <!-- Mastodon -->
-              <a class="button button-mastodon" href="https://lgbtqia.space/@MelodyUwU" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/mastodon.svg" alt="Mastodon Logo">Mastodon</a>
-
-              <!-- Signal -->
-              <a class="button button-signal" href="https://signal.me/#eu/t-55VSK90eTKEWWZUZYrduORRjO5e9h_eX77vW_L-9bOYVHUYGhDELdWEyTlX-af" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/signal.svg" alt="Signal Logo">Signal</a>
+              <!-- Steam -->
+              <a class="button button-steam-alt" href="https://steamcommunity.com/id/chorwatjajgo/" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/steam.svg" alt="Steam Logo">Steam</a>
 
               <!-- Spotify -->
               <a class="button button-spotify" href="https://open.spotify.com/user/3126epu47c6cs3sjl4d2tfvdeeye?si=leJsMt7mTpiYSyD5shS-ww" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/spotify.svg" alt="Spotify Logo">Spotify</a>
 
-              <!-- Steam Alt -->
-              <a class="button button-steam-alt" href="https://steamcommunity.com/id/chorwatjajgo/" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/steam.svg" alt="Steam Logo">Steam</a>
+              <!-- Mastodon -->
+              <a class="button button-mastodon" href="https://lgbtqia.space/@MelodyUwU" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/mastodon.svg" alt="Mastodon Logo">Mastodon</a>
 
-              <!-- Telegram -->
-              <a class="button button-telegram" href="https://t.me/melodyuwuu" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/telegram.svg" alt="Telegram Logo">Telegram</a>
+              <!-- Bluesky -->
+              <a class="button button-bluesky" href="https://bsky.app/profile/melodyuwu.bsky.social" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/bluesky.svg" alt="Bluesky Logo">Bluesky</a>
 
-              <!-- Generic Blog -->
+              <!-- Ko-fi -->
+              <a class="button button-ko-fi" href="https://ko-fi.com/melodyuw" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/ko-fi.svg" alt="Ko-fi Logo">Support me on Ko-fi</a>
+
+              <!-- Buy Me A Coffee -->
+              <a class="button button-coffee" href="https://buymeacoffee.com/cutiemelob" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/buy-me-a-coffee.svg" alt="Buy Me A Coffee Logo">Buy Me A Coffee</a>
+
+              <!--- Blog -->
               <a class="button button-default" href="https://melodyuwu.bearblog.dev" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-blog.svg" alt="Blog Icon">Blog</a>
 
-              <!-- Generic Email Alt -->
+              <!-- Email -->
               <a class="button button-default" href="mailto://cutiemelo@proton.me" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-email-alt.svg" alt="Email Icon">Email</a>
 
       </div>
