--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
               <!-- Discord -->
               <a class="button button-discord" href="https://discordapp.com/users/1163154572370509844" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/discord.svg" alt="Discord Logo">Discord</a>
 
+              <!-- Codeberg -->
+              <a class="button button-codeberg" href="https://codeberg.org/MelodyUwU" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/codeberg.png" alt="Codeberg icon">Codeberg</a>
+
               <!-- GitHub -->
               <a class="button button-github" href="https://github.com/Chorwacjen" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/github.svg" alt="GitHub Logo">GitHub</a>
 
