--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
               <!-- Codeberg -->
               <a class="button button-codeberg" href="https://codeberg.org/MelodyUwU" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/codeberg.png" alt="Codeberg icon">Codeberg</a>
 
+              <!-- git.gay -->
+              <a class="button button-git-gay" href="https://git.gay/MelodyUwU" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/gay.png" alt="git.gay icon">git.gay</a>
+
               <!-- GitHub -->
               <a class="button button-github" href="https://github.com/Chorwacjen" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/github.svg" alt="GitHub Logo">GitHub</a>
 
