--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         
       <!-- Feel free to add your own footer information, including updating `privacy.html` to reflect how your LittleLink fork is set up -->
       <footer>
-        <a href="privacy.html">Privacy Policy</a> | Build your own by forking <a href="https://littlelink.io" target="_blank" rel="noopener">LittleLink</a>
+        <a>All content on this site is licensed under CC BY-SA-ND 4.0, except for images, logos and other content, which is property of their respective owners</a>
       </footer>
     
     </div>
