--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
               <!-- Signal -->
               <a class="button button-signal" href="https://signal.me/#eu/t-55VSK90eTKEWWZUZYrduORRjO5e9h_eX77vW_L-9bOYVHUYGhDELdWEyTlX-af" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/signal.svg" alt="Signal Logo">Signal</a>
 
+              <!-- Session -->
+              <a class="button button-session" href="https://femboy.beauty/4S9_1" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/session.png" alt="Session icon">Session</a>
+
               <!-- Telegram -->
               <a class="button button-telegram" href="https://t.me/melodyuwuu" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/telegram.svg" alt="Telegram Logo">Telegram</a>
 
