--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
               <!-- Telegram -->
               <a class="button button-telegram" href="https://t.me/melodyuwuu" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/telegram.svg" alt="Telegram Logo">Telegram</a>
 
+              <!-- Tox -->
+              <a class="button button-tox" href="https://femboy.beauty/JjoDP" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/tox.png" alt="Tox icon">Tox</a>
+
               <!-- Discord -->
               <a class="button button-discord" href="https://discordapp.com/users/1163154572370509844" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/discord.svg" alt="Discord Logo">Discord</a>
 
