--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
               <!-- Telegram -->
               <a class="button button-telegram" href="https://t.me/melodyuwuu" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/telegram.svg" alt="Telegram Logo">Telegram</a>
 
+              <!-- Jami -->
+<a class="button button-jami" href="https://femboy.beauty/j80_W" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/jami.png" alt="Jami icon">Jami</a>
+
               <!-- Tox -->
               <a class="button button-tox" href="https://femboy.beauty/JjoDP" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/tox.png" alt="Tox icon">Tox</a>
 
