--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
               <a class="button button-telegram" href="https://t.me/melodyuwuu" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/telegram.svg" alt="Telegram Logo">Telegram</a>
 
               <!-- Jami -->
-<a class="button button-jami" href="https://femboy.beauty/j80_W" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/jami.png" alt="Jami icon">Jami</a>
+              <a class="button button-jami" href="https://femboy.beauty/j80_W" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/jami.png" alt="Jami icon">Jami</a>
 
               <!-- Tox -->
-              <a class="button button-tox" href="https://femboy.beauty/JjoDP" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/tox.png" alt="Tox icon">Tox</a>
+              <a class="button button-tox" href="https://femboy.beauty/0a3vI" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/tox.png" alt="Tox icon">Tox</a>
 
               <!-- Discord -->
               <a class="button button-discord" href="https://discordapp.com/users/1163154572370509844" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/discord.svg" alt="Discord Logo">Discord</a>
@@ -90,7 +90,7 @@
               <a class="button button-github" href="https://github.com/Chorwacjen" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/github.svg" alt="GitHub Logo">GitHub</a>
 
               <!-- GitLab -->
-              <a class="button button-gitlab" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/gitlab.svg" alt="GitLab Logo">GitLab</a>
+              <a class="button button-gitlab" href="https://gitlab.com/Chorwacjen" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/gitlab.svg" alt="GitLab Logo">GitLab</a>
 
               <!-- Mastodon -->
               <a class="button button-mastodon" href="https://lgbtqia.space/@MelodyUwU" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/mastodon.svg" alt="Mastodon Logo">Mastodon</a>
