--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
               <!-- Jami -->
               <a class="button button-jami" href="https://femboy.beauty/j80_W" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/jami.png" alt="Jami icon">Jami</a>
 
+              <!-- SimpleX -->
+              <a class="button button-simplex" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/default-icon.svg" alt="SimpleX icon">SimpleX</a>
+
               <!-- Tox -->
               <a class="button button-tox" href="https://femboy.beauty/0a3vI" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/tox.png" alt="Tox icon">Tox</a>
 
