--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               <a class="button button-jami" href="https://femboy.beauty/j80_W" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/jami.png" alt="Jami icon">Jami</a>
 
               <!-- SimpleX -->
-              <a class="button button-simplex" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/default-icon.svg" alt="SimpleX icon">SimpleX</a>
+              <a class="button button-simplex" href="https://simplex.chat/contact#/?v=2-7&smp=smp%3A%2F%2FUkMFNAXLXeAAe0beCa4w6X_zp18PwxSaSjY17BKUGXQ%3D%40smp12.simplex.im%2FNvrFWw3xzyUl-IW6I6UGgqS4fOonT6Ca%23%2F%3Fv%3D1-3%26dh%3DMCowBQYDK2VuAyEAO9YsbS9IImYngRALROuFTu_hAUl8YotOz9OqCRtM5Cc%253D%26srv%3Die42b5weq7zdkghocs3mgxdjeuycheeqqmksntj57rmejagmg4eor5yd.onion" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/simplex.png" alt="SimpleX icon">SimpleX</a>
 
               <!-- Tox -->
               <a class="button button-tox" href="https://femboy.beauty/0a3vI" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/tox.png" alt="Tox icon">Tox</a>
